--- a/db.properties
+++ b/db.properties
@@ -1,4 +1,4 @@
-driver="oracle.jdbc.OracleDriver"
-url="jdbc:oracle:thin:@127.0.0.1:1521:orcl"
+driver=oracle.jdbc.OracleDriver
+url=jdbc:oracle:thin:@127.0.0.1:1521:orcl
 user=ariel
-password=oracle
+pwd=oracle
